# GraduationProject

./: GraduationProject.atsln  README.md
0-MCAL&HAL_Drivers_/: ADC_interface.h  ADC_program.c  BUZZER_interface.h  BUZZER_private.h  DCMOTOR_interface.h  DISPLAY_interface.h  DISPLAY_program.c  EEPROM_program.c  GIE_program.c  HC05_Interface.h  HC05_Private.h  HC05_Program.c  KEYPAD_private.h  LCD_config.h  LCD_private.h  LCD_program.c  LDR_interface.h  LED_interface.h  LED_private.h  LED_program.c  SPI_private.h  SPI_program.c  SSD_interface.h  SSD_program.c  STEPMOTOR_interface.h  SWITCH_config.h  TIMER_private.h  ULTRASONIC_interface.h  ULTRASONIC_program.c  USART_config.h  USART_interface.h  USART_program.c
1-SERVICE_LAYER/: DISPLAY_interface.h  DISPLAY_program.c
2-APPs/: GitHubResources.txt  Hardware.txt
2-APPs/ImportantScreenshots/: Makefile
2-APPs/MainApp/: ADC_interface.h  APP.c  APP.cpp  APP.elf  APP.hex  APP.hpp  APP.lst  AutonomousVehicle..h  AutonomousVehicle..hpp  AutonomousVehicle.c  AutonomousVehicle.cpp  CMakeLists.txt  DCMOTOR_interface.h  DIO_interface.h  DIO_program.c  DISPLAY_interface.h  DISPLAY_manager.c  DISPLAY_manager.cpp  DISPLAY_manager.h  DISPLAY_manager.hpp  DISPLAY_program.c  EXTI_interface.h  JOYSTICK_interface.h  JOYSTICK_program.c  LCD_config.h  LCD_interface.h  LCD_program.c  LED_interface.h  LED_program.c  MOV_manager.c  MOV_manager.cpp  MOV_manager.h  MOV_manager.hpp  Makefile  SENSOR_manager.c  SENSOR_manager.cpp  SENSOR_manager.h  SENSOR_manager.hpp  SERVOMOTOR_interface.h  SERVOMOTOR_program.c  (+18 more)
2-APPs/MainApp/include/: DIO_interface.h  TIMER_interface.h  TIMER_private.h  ULTRASONIC_interface.h
2-APPs/MainApp/testing/: CMakeLists.txt  mytests.cpp
ARM_Grad_Project/ARM _Config_CubeMX/: .cproject  .project  ARM _Config_CubeMX.ioc  STM32F103C4TX_FLASH.ld
ARM_Grad_Project/ARM _Config_CubeMX/Debug/: ARM _Config_CubeMX.elf  ARM _Config_CubeMX.hex  ARM _Config_CubeMX.list  ARM _Config_CubeMX.map  makefile  objects.list
ARM_Grad_Project/ARM_Grad_Project/.metadata/: .log4j2.xml  version.ini
ARM_Grad_Project/ARM_Interfacing/.metadata/: .log4j2.xml  version.ini
ARM_Grad_Project/ARM_Simulation/: Backup Of New Project.pdsbak  Last Loaded New Project.pdsbak  New Project.pdsprj  New Project.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace
AlgoritmsAndDataStructure/BinarySearch/: a.out  algoritms.c
AlgoritmsAndDataStructure/BubbleSort/: a.out  algoritms.c
AlgoritmsAndDataStructure/LinearSearch/: a.out  algoritms.c
AlgoritmsAndDataStructure/queue/: a.out  queue.c
AlgoritmsAndDataStructure/signlelinkedlist/: a.out  singlelinkedlist.c
AlgoritmsAndDataStructure/stack/: a.out  stack.c
BL_STARTUPCODE_LS_STM32f103/: Application.c  LinkerScript.ld  Testing.elf  application.map  startup_stm32f10x.c  startup_stm32f10x.elf  startup_stm32f10x.hex
Dashboard/: .cproject  LinkerScript.ld  resources.txt
Dashboard/.metadata/: .log4j2.xml  version.ini
Dashboard/Datasheet/: BIT_MATH.h  STD_TYPES.h  resources.txt
ECU_One/: README.md  logfile
ECU_One/0-MCAL&HAL_Drivers_/: BUZZER_config.h  DCMOTOR_program.c  EEPROM_config.h  EEPROM_interface.h  EXTI_config.h  GIE_private.h  HC05_Config.h  KEYPAD_program.c  LDR_config.h  LED_program.c  LM35_interface.h  LM35_private.h  LM35_program.c  SERVOMOTOR_config.h  SERVOMOTOR_program.c  SSD_private.h  STEPMOTOR_config.h  STEPMOTOR_private.h  SWITCH_interface.h  SWITCH_private.h  SWITCH_program.c
ECU_One/2-APPs/: AutonomousVehicleDocumentation.docx  RamElectronicStore.txt
ECU_One/Proteus_Simulation/: FourUltraSonic&SSD.pdsprj  IIC_Master&Slave&SSD.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  InterruptTesting.pdsprj  InterruptTesting.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  Intialize_Lcd_Keypad_together.pdsprj  Last Loaded FourUltraSonic&SSD.pdsbak  Last Loaded GraduationProject.pdsbak  Last Loaded project_Lcd_Keypad_together.pdsbak  Last Loaded project_Lcd_Keypad_together_two.pdsbak  LcdPrinting.pdsprj  project_Lcd_Keypad_together_two.pdsprj
GATWAY/: README.md
GraduationProject/: APP.h  BIT_MATH.h  DIO_interface.h  DIO_private.h  DIO_program.c  GraduationProject.componentinfo.xml  GraduationProject.cproj  KEYPAD_interface.h  LCD_interface.h  LCD_program.c
GraduationProject/Debug/: APP.d  GraduationProject.elf  GraduationProject.hex  GraduationProject.lss  GraduationProject.map  GraduationProject.srec  KEYPAD_program.d  LCD_program.d  Makefile  makedep.mk
MCAL&HAL_Drivers_/: ADC_interface.h  ADC_program.c  APP.c  APP.h  BUZZER_interface.h  BUZZER_private.h  BUZZER_program.c  DCMOTOR_interface.h  DIO_interface.h  DIO_program.c  DISPLAY_program.c  EEPROM_config.h  EEPROM_interface.h  EEPROM_private.h  EEPROM_program.c  EXTI_private.h  EXTI_program.c  HC05_Interface.h  HC05_Program.c  IIC_config.h  IIC_interface.h  IIC_private.h  IIC_program.c  KEYPAD_config.h  LCD_config.h  LCD_interface.h  LCD_private.h  LDR_interface.h  LDR_private.h  LDR_program.c  LED_config.h  LED_interface.h  LED_private.h  LED_program.c  LM35_config.h  LM35_interface.h  LM35_private.h  LM35_program.c  SERVOMOTOR_config.h  SERVOMOTOR_interface.h  (+27 more)
Proteus_Simulation/: Backup Of FourUltraSonic&SSD.pdsbak  FourUltraSonic&SSD.pdsprj  FourUltraSonic&SSD.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  GraduationProject.pdsprj  IIC_Master&Slave&SSD.pdsprj  Last Loaded FourUltraSonic&SSD.pdsbak  Last Loaded GraduationProject.pdsbak  Last Loaded customchar.pdsbak  Led_Button.pdsprj  Led_Button.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  customchar.pdsprj  project_Lcd_Keypad_together.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  project_Lcd_Keypad_together_two.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace
SERVICE_LAYER/: DISPLAY_program.c
Simulation/: Led_Button.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  project_Lcd_Keypad_together.pdsprj  project_Lcd_Keypad_together.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace  project_Lcd_Keypad_together_two.pdsprj.DESKTOP-5DF0Q3C.Ahmed Ferganey.workspace
Testing/: KeyPad.c
Testing/TestingOne/: LCD2.c
Testing/TestingTwo/: TestingEXTI.c
(+314 files in other folders)
